--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -5,7 +5,7 @@
     --dark: #333333;
     --danger: #dc3545;
     --success: #28a745;
-    --warning: #ffc107;
+    --warning: #FF9800;
 }
 
 * {
@@ -35,6 +35,7 @@ body {
     align-items: center;
     font-size: 1.5rem;
     font-weight: bold;
+    margin-left: 100px;
 }
 
 .logo i {
@@ -56,10 +57,12 @@ body {
     text-decoration: none;
     font-weight: 500;
     transition: opacity 0.3s;
+    font-size: 20px;
 }
 
 .nav-links a:hover {
     opacity: 0.8;
+    color: var(--warning);
 }
 
 .container {
